--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Maven template
 target/
-.idea/
+#.idea/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
