--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,14 @@
             <version>2.2.2</version>
         </dependency>
 
+        <!--测试时所需的web相关-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
