--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:spring-*.xml</param-value>
+        <param-value>classpath*:spring/config/spring-*.xml</param-value>
     </context-param>
     
     <listener>
@@ -25,7 +25,7 @@
         </servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath*:dispatcher-servlet.xml</param-value>
+            <param-value>classpath*:spring/config/dispatcher-servlet.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
